--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -1,24 +1,106 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello IndexController!{% endblock %}
+{% block title %}index
+{% endblock %}
+
+{% block stylesheets %}
+	{{ parent() }}
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+{% endblock %}
+
+{% block javascripts %}
+	{{ parent() }}
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.9/dist/umd/popper.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div data-controller="hello">
-   ...
-</div>
+	<!-- Navigation Bar -->
+	<nav class="navbar sticky-top bg-body-tertiary navbar-expand-lg bg-body-tertiary" style="padding-top: 20px; padding-bottom: 20px;">
+		<div class="container-fluid">
+			<a class="navbar-brand" href="#">Navbar w/ text</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarText">
+				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
+					<li class="nav-item">
+						<a class="nav-link active" aria-current="page" href="#">Home</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Features</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Pricing</a>
+					</li>
+				</ul>
+				<span class="navbar-text">
+					Navbar text with an inline element
+				</span>
+			</div>
+		</div>
+	</nav>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+	<!-- Carousel -->
+	<div id="carouselExample" class="carousel slide container-fluid bg-dark" data-ride="carousel" style="height: 33vW;">
+		<div class="carousel-inner ">
+			<div class="carousel-item active ">
+				<img src="https://via.placeholder.com/1200x400" class="d-block w-100 img-fluid" alt="Carousel Image 1">
+				<iframe frameborder="0" src="https://itch.io/embed/1345654?border_width=0&amp;bg_color=39006f&amp;border_color=000000" width="206" height="165">
+					<a href="https://foundtexas.itch.io/yaocalli">YAOCALLI by FoundTexas, Charlestone0, Tenextiic</a>
+				</iframe>
+				<div class="carousel-caption">
+					ddd
+				</div>
+			</div>
+			<div class="carousel-item">
+				<img src="https://via.placeholder.com/1200x400" class="d-block w-100 img-fluid" alt="Carousel Image 2">
+				<div class="carousel-caption">
+					<iframe frameborder="0" src="https://itch.io/embed/1345654?border_width=0&amp;bg_color=39006f&amp;border_color=000000" width="206" height="165">
+						<a href="https://foundtexas.itch.io/yaocalli">YAOCALLI by FoundTexas, Charlestone0, Tenextiic</a>
+					</iframe>
+				</div>
+			</div>
+			<div class="carousel-item">
+				<img src="https://via.placeholder.com/1200x400" class="d-block w-100 img-fluid" alt="Carousel Image 3">
+				<div class="carousel-caption">
+					<iframe frameborder="0" src="https://itch.io/embed/1345654?border_width=0&amp;bg_color=39006f&amp;border_color=000000" width="206" height="165">
+						<a href="https://foundtexas.itch.io/yaocalli">YAOCALLI by FoundTexas, Charlestone0, Tenextiic</a>
+					</iframe>
+				</div>
+			</div>
+		</div>
+		<a class="carousel-control-prev" href="#carouselExample" role="button" data-slide="prev">
+			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			<span class="sr-only">Previous</span>
+		</a>
+		<a class="carousel-control-next" href="#carouselExample" role="button" data-slide="next">
+			<span class="carousel-control-next-icon" aria-hidden="true"></span>
+			<span class="sr-only">Next</span>
+		</a>
+	</div>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/Users/parap/OneDrive/Documentos/OPTIMO/Portafolio/src/Controller/IndexController.php'|file_link(0) }}">src/Controller/IndexController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/parap/OneDrive/Documentos/OPTIMO/Portafolio/templates/index/index.html.twig'|file_link(0) }}">templates/index/index.html.twig</a></code></li>
-    </ul>
-</div>
+	<!-- Image Gallery -->
+	<div class="container mt-5">
+		<h2 class="text-center mb-4">Image Gallery</h2>
+		<div class="row">
+			<div class="col-sm-6 col-md-4">
+				<img src="https://via.placeholder.com/300" class="img-fluid mb-3" alt="Gallery Image 1">
+			</div>
+			<div class="col-sm-6 col-md-4">
+				<img src="https://via.placeholder.com/300" class="img-fluid mb-3" alt="Gallery Image 2">
+			</div>
+			<div class="col-sm-6 col-md-4">
+				<img src="https://via.placeholder.com/300" class="img-fluid mb-3" alt="Gallery Image 3">
+			</div>
+		</div>
+	</div>
+
+	<!-- Footer -->
+	<footer class="bg-dark text-white text-center py-3 mt-5">
+		<p>&copy; 2024 Your Website. All Rights Reserved.</p>
+	</footer>
+
 {% endblock %}
