--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,7 +1,9 @@
 body {
     overflow-x: hidden;
+    overflow-y: hidden;
+
     background-color: rgb(85, 85, 85);
-    max-width: 100%;
+
     width: 100%;
     min-height: 100vh;
   }
