--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,24 +6,40 @@
 			{% block title %}Welcome!
 			{% endblock %}
 		</title>
-		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>"> 
-        
-        {% block stylesheets %}{% endblock %}
+		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>"> {% block stylesheets %}{% endblock %}
 
 		<link rel="stylesheet" href="bootstrap-5.3.2-dist/css/bootstrap.css">
 		<script src="bootstrap-5.3.2-dist/js/bootstrap.min.js"></script>
 
-		{% block javascripts %}
-			{% block importmap %}
-				{{ importmap('app') }}
-			{% endblock %}
+		<style>
+		/* Override Bootstrap styles to set --bs-navbar-padding-y to 0.5rem */
+		:root
+		{
+			--bs-navbar-padding-y: 0.5rem;
+		}
+
+		/* Override Bootstrap styles to remove padding from navbar */
+		.navbar {
+			padding-top: var(--bs-navbar-padding-y);
+			padding-bottom: var(--bs-navbar-padding-y);
+		}
+
+		/* Apply pixelated font to the navbar brand */
+		.navbar-brand {
+			font-family: 'YourPixelatedFont', sans-serif;
+		}
+	</style>
+	<link rel="stylesheet" href="path/to/your/pixelated-font.css">
+
+	{% block javascripts %}
+		{% block importmap %}
+			{{ importmap('app') }}
 		{% endblock %}
-	</head>
-	<body>
-		{% block head %}
-			<!--{{ include('index/navbar.html.twig') }}-->
-		{% endblock %}
-		{% block body %}
-        {% endblock %}
-	</body>
-</html>
+	{% endblock %}
+</head>
+<body>
+	{% block head %}
+		{{ include('index/navbar.html.twig') }}
+	{% endblock %}
+	{% block body %}{% endblock %}
+</body></html>
