--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,44 +2,30 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>
-			{% block title %}Welcome!
+			FoundTexas - {% block title %}
 			{% endblock %}
 		</title>
 		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>"> {% block stylesheets %}{% endblock %}
-
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="bootstrap-5.3.2-dist/css/bootstrap.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+		
 		<script src="bootstrap-5.3.2-dist/js/bootstrap.min.js"></script>
 
-		<style>
-		/* Override Bootstrap styles to set --bs-navbar-padding-y to 0.5rem */
-		:root
-		{
-			--bs-navbar-padding-y: 0.5rem;
-		}
-
-		/* Override Bootstrap styles to remove padding from navbar */
-		.navbar {
-			padding-top: var(--bs-navbar-padding-y);
-			padding-bottom: var(--bs-navbar-padding-y);
-		}
-
-		/* Apply pixelated font to the navbar brand */
-		.navbar-brand {
-			font-family: 'YourPixelatedFont', sans-serif;
-		}
-	</style>
-	<link rel="stylesheet" href="path/to/your/pixelated-font.css">
-
-	{% block javascripts %}
-		{% block importmap %}
-			{{ importmap('app') }}
+		{% block javascripts %}
+			{% block importmap %}
+				{{ importmap('app') }}
+			{% endblock %}
 		{% endblock %}
-	{% endblock %}
-</head>
-<body>
-	{% block head %}
-		{{ include('index/navbar.html.twig') }}
-	{% endblock %}
-	{% block body %}{% endblock %}
-</body></html>
+	</head>
+	<body>
+		{% block head %}
+			{{ include('pausemenu.html.twig') }}
+		{% endblock %}
+		{% block body %}{% endblock %}
+	</body>
+</html>
