--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -3,77 +3,51 @@
 {% block title %}index
 {% endblock %}
 
-{% block stylesheets %}
-	{{ parent() }}
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-{% endblock %}
-
-{% block javascripts %}
-	{{ parent() }}
-	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.9/dist/umd/popper.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-{% endblock %}
-
 {% block body %}
-	<!-- Carousel -->
-	<div id="carouselExample" class="carousel slide container-fluid bg-dark" data-ride="carousel" style="height: 33vW;">
-		<div class="carousel-inner ">
-			<div class="carousel-item active ">
-				<img src="https://via.placeholder.com/1200x400" class="d-block w-100 img-fluid" alt="Carousel Image 1">
-				<iframe frameborder="0" src="https://itch.io/embed/1345654?border_width=0&amp;bg_color=39006f&amp;border_color=000000" width="206" height="165">
-					<a href="https://foundtexas.itch.io/yaocalli">YAOCALLI by FoundTexas, Charlestone0, Tenextiic</a>
-				</iframe>
-				<div class="carousel-caption">
-					ddd
-				</div>
-			</div>
-			<div class="carousel-item">
-				<img src="https://via.placeholder.com/1200x400" class="d-block w-100 img-fluid" alt="Carousel Image 2">
-				<div class="carousel-caption">
-					<iframe frameborder="0" src="https://itch.io/embed/1345654?border_width=0&amp;bg_color=39006f&amp;border_color=000000" width="206" height="165">
-						<a href="https://foundtexas.itch.io/yaocalli">YAOCALLI by FoundTexas, Charlestone0, Tenextiic</a>
-					</iframe>
-				</div>
-			</div>
-			<div class="carousel-item">
-				<img src="https://via.placeholder.com/1200x400" class="d-block w-100 img-fluid" alt="Carousel Image 3">
-				<div class="carousel-caption">
-					<iframe frameborder="0" src="https://itch.io/embed/1345654?border_width=0&amp;bg_color=39006f&amp;border_color=000000" width="206" height="165">
-						<a href="https://foundtexas.itch.io/yaocalli">YAOCALLI by FoundTexas, Charlestone0, Tenextiic</a>
-					</iframe>
-				</div>
-			</div>
-		</div>
-		<a class="carousel-control-prev" href="#carouselExample" role="button" data-slide="prev">
-			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-			<span class="sr-only">Previous</span>
-		</a>
-		<a class="carousel-control-next" href="#carouselExample" role="button" data-slide="next">
-			<span class="carousel-control-next-icon" aria-hidden="true"></span>
-			<span class="sr-only">Next</span>
-		</a>
+
+	{# {% include 'yaocalli.html.twig' %} #}
+	<div class=" d-flex justify-content-center align-items-center" style="max-height: 15rem; overflow: hidden;">
+		<img src="{{ asset('pandabanner.png') }}" style="width: 100%; height: auto;" alt="Banner">
 	</div>
 
+	<div class="container">
+
+		<h2 class=" m-3 text-center accent-color">Computer Scientist | Game & Web Developer</h2>
+
+		<h5 class="container px-4 white-text">
+			Greetings! Welcome to my corner of the digital universe. I'm Rodolfo León, a passionate computer scientist specializing in 
+												3D Graphics and Game Development. I thrive on collaboration and believe that diverse perspectives fuel innovation, leading 
+												to captivating user experiences that resonate across cultures.
+		</h5>
+
+	</div>
+
+	{% include 'timeline.twig' %}
+
 	<!-- Image Gallery -->
-	<div class="container mt-5">
-		<h2 class="text-center mb-4">Image Gallery</h2>
+	<div class="container mt-5 light-main-bg rounded-5">
+		<h2 class="text-center mt-3 main-color">Image Gallery</h2>
 		<div class="row">
-			<div class="col-sm-6 col-md-4">
-				<img src="https://via.placeholder.com/300" class="img-fluid mb-3" alt="Gallery Image 1">
+			<div class="col-6 col-md-3">
+				<img src="https://via.placeholder.com/300" class="img-fluid mb-3 rounded-5" alt="Gallery Image 1">
 			</div>
-			<div class="col-sm-6 col-md-4">
-				<img src="https://via.placeholder.com/300" class="img-fluid mb-3" alt="Gallery Image 2">
+			<div class="col-6 col-md-3">
+				<img src="https://via.placeholder.com/300" class="img-fluid mb-3 rounded-5" alt="Gallery Image 2">
 			</div>
-			<div class="col-sm-6 col-md-4">
-				<img src="https://via.placeholder.com/300" class="img-fluid mb-3" alt="Gallery Image 3">
+			<div class="col-6 col-md-3">
+				<img src="https://via.placeholder.com/300" class="img-fluid mb-3 rounded-5" alt="Gallery Image 3">
+			</div>
+			<div class="col-6 col-md-3">
+				<img src="https://via.placeholder.com/300" class="img-fluid mb-3 rounded-5" alt="Gallery Image 3">
 			</div>
 		</div>
 	</div>
 
 	<!-- Footer -->
 	<footer class="bg-dark text-white text-center py-3 mt-5">
-		<p>&copy; 2024 Your Website. All Rights Reserved.</p>
+		<p>&copy; 2024 . All Rights Reserved.</p>
 	</footer>
+
+	<iframe class="position-fixed" style="z-index: 1050; border-radius: 12px;" src="https://open.spotify.com/embed/playlist/5pS9v5OBw1KYqPo4XtPoEu?utm_source=generator&theme=0" width="25%" height="152" frameborder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 
 {% endblock %}
