--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,16 +4,16 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>
-			FoundTexas - {% block title %}
-			{% endblock %}
+			FoundTexas - {% block title %} none {% endblock %}
 		</title>
-		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>"> {% block stylesheets %}{% endblock %}
+		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%30>🐼</text></svg>"> {% block stylesheets %}{% endblock %}
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="bootstrap-5.3.2-dist/css/bootstrap.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-		
+
+
 		<script src="bootstrap-5.3.2-dist/js/bootstrap.min.js"></script>
 
 		{% block javascripts %}
@@ -23,6 +23,13 @@
 		{% endblock %}
 	</head>
 	<body>
+		{% block sound %}
+			<audio class="audio-sfx-group" id="audiopress" src="{{ asset('sounds/pressUI.mp3') }}"></audio>
+			<audio class="audio-sfx-group" id="audioback" src="{{ asset('sounds/backUI.mp3') }}"></audio>
+			<audio class="audio-sfx-group" id="audiobloop" src="{{ asset('sounds/bloopUI.mp3') }}"></audio>
+
+		{% endblock %}
+
 		{% block head %}
 			{{ include('pausemenu.html.twig') }}
 		{% endblock %}
