--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -24,16 +24,16 @@ a,p,h1,h2,h3,h4,h5,h6 {
   color: #4D114D;
 }
 .dark-main-bg {
-  background-color: #220f22;
+  background-color: #341a3a;
 }
 .light-main {
   color: #cfa6cb;
 }
 .light-main-bg {
-  background-color: #A957A0;
+  background-color: #57a9a1;
 }
 .accent-color {
-  color: #aa843c;
+  color: #3caa8b;
 }
 
 
@@ -49,7 +49,6 @@ a,p,h1,h2,h3,h4,h5,h6 {
 
 /* Button styles */
 .button {
-  background-color: #6F1B6F; /* Purple */
   color: #FFFFFF; /* White */
   border: none;
   padding: 10px 20px;
@@ -60,5 +59,5 @@ a,p,h1,h2,h3,h4,h5,h6 {
 
 /* Button hover effect */
 .button:hover {
-  background-color: #af3aaf; /* Darker shade of purple */
+  background-color: #e4a3e4; /* Darker shade of purple */
 }
