--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -2,13 +2,16 @@ body {
   overflow-x: hidden;
   width: 100%;
   max-width: 100%;
-  background-color: #3B3B3B; /* Dark gray */
+  background-color: #2c232c; /* Dark gray */
 }
 
-a,p,h1,h2,h3,h4,h5,h6 {
+a,label,p,h1,h2,h3,h4,h5,h6 {
   font-family: "Pixelify Sans", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
+  line-height: 2rem;
+  word-spacing: 0.5rem;
+  letter-spacing: 0.1rem;
   font-style: normal;
   color: #FFFFFF;
 }
@@ -17,23 +20,30 @@ a,p,h1,h2,h3,h4,h5,h6 {
 .main-color {
   color: #6F1B6F; 
 }
-.main-bg {
-  background-color: #6F1B6F; ;
-}
-.dark-main {
+.main-color-dark {
   color: #4D114D;
-}
-.dark-main-bg {
-  background-color: #341a3a;
-}
-.light-main {
-  color: #cfa6cb;
-}
-.light-main-bg {
-  background-color: #57a9a1;
 }
 .accent-color {
   color: #3caa8b;
+}
+.accent-color-dark {
+  color: #3B3B3B;
+}
+
+.main-bg {
+  background-color: #6F1B6F; ;
+}
+.main-bg-dark {
+  background-color: #341a3a;
+}
+.main-bg-light {
+  color: #cfa6cb;
+}
+.accent-bg {
+  background-color: #57a9a1;
+}
+.accent-bg-dark {
+  background-color: #1e2f2d;
 }
 
 
@@ -48,16 +58,11 @@ a,p,h1,h2,h3,h4,h5,h6 {
 }
 
 /* Button styles */
-.button {
-  color: #FFFFFF; /* White */
-  border: none;
-  padding: 10px 20px;
-  border-radius: 5px;
+.custom-btn {
   cursor: pointer;
-  transition: background-color 0.3s ease;
+  transition: transform 0.3s ease; /* Smooth transition for the transform property */
 }
 
-/* Button hover effect */
-.button:hover {
-  background-color: #e4a3e4; /* Darker shade of purple */
+.custom-btn:hover {
+  transform: scale(1.1); /* Increase scale on hover */
 }
