--- a/templates/pausemenu.html.twig
+++ b/templates/pausemenu.html.twig
@@ -1,87 +1,91 @@
 <!-- Collapsible Navbar -->
-<div class="collapse navbar-collapse collapse sticky-top" id="navbarCollapse">
-	<nav class="navbar navbar-light bg-light">
+<div class="collapse navbar-collapse collapse position-fixed" id="navbarCollapse" style="width:100%;">
+	<nav class="navbar navbar-dark main-bg">
 		<div class="container-fluid" style="height: 10vh;">
-			<div class="d-none d-sm-block col-auto " style="height: 100%;">
-				<img src="bannerPanda.png" alt="Other Image" style="height: 100%;">
-			</div>
-
 			<a class="navbar-brand col-auto" href="#">
 				FoundTexas
 			</a>
+			<div class="d-none d-sm-block col-auto " style="width:100%;">
+				<img src="bannerPanda.png" alt="Other Image">
+			</div>
 		</div>
 	</nav>
 </div>
 
-<button 
-	type="button" 
-	class="custom-btn light-main-bg position-fixed" 
-	onclick="playSound('audiopress')"
-	style="z-index: 1050; top: 10px; left: 7px; height:3rem; width: 3rem;" 
-	data-bs-toggle="modal" 
-	data-bs-target="#pauseMenuModal"
->
-	<i class="fa-solid fa-pause fa-beat" style="color: #ffffff; "></i>
+<button type="button" class="custom-btn position-fixed rounded-4 accent-bg " onclick="playSound('audiopress')" style="z-index: 1050; top: 10px; right: 7px; " data-bs-toggle="modal" data-bs-target="#pauseMenuModal">
+	<i class="fa fa-pause fa-lg my-3 mx-2" style="color: #ffffff; "></i>
 </button>
 
 
 <!-- Modal -->
 <div class="modal fade" id="pauseMenuModal" tabindex="-1" aria-labelledby="pauseMenuModalLabel" aria-hidden="true">
 	<div class="modal-dialog">
-		<div class="modal-content dark-main-bg">
+		<div class="modal-content accent-bg-dark">
 			<div class="modal-header">
 				<h2 class="modal-title text-center" id="pauseMenuModalLabel">Pause Menu</h2>
-				<button type="button" onclick="playSound('audioback')" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+
+				<div type="button" onclick="playSound('audioback')" data-bs-dismiss="modal">
+					<i class="fa fa-times fa-lg" style="color: #ff0000;"></i>
+				</div>
+
 			</div>
 			<div class="modal-body main-bg">
+				<a type="button" href="#aboutme" class="d-block mb-3" data-bs-dismiss="modal">About Me</a>
+                <a type="button" href="#projects" class="d-block mb-3" data-bs-dismiss="modal">Projects</a>
+
+				<!-- navbar toggle -->
 				<div class="row main-bg">
 					<h5 class="col ">
-						Toggle NavBar
+						Clasic NavBar:
 					</h5>
-					<button type="button" class="col-auto btn btn-primary " id="collapseOnButton" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+					<button type="button" class="col-auto custom-btn btn-primary " id="collapseOnButton" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
 						ON
 					</button>
-					<button type="button" class="col-auto btn btn-danger" id="collapseOffButton" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+					<button type="button" class="col-auto custom-btn btn-danger" id="collapseOffButton" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
 						Off
 					</button>
 				</div>
+
+				<!-- Volume Slider -->
+				<div class="row main-bg">
+					<label for="volumeRange" class="form-label col-auto">Volume:</label>
+					<input type="range" class="form-range col-auto" onchange="setVolume(this.value, 'audio-sfx-group')" style="width:100%;" id="volumeRange" min="0" max="1" step="0.01" value="1">
+				</div>
+
 			</div>
-			<div class="modal-footer dark-main-bg">
-				<button type="button" class="btn btn-danger">Quit</button>
-			</div>
+			<div class="modal-footer dark-main-bg"></div>
 		</div>
 	</div>
 </div>
 
 <script>
-	document.addEventListener('DOMContentLoaded', function() {
-		const buttons = document.getElementsByClassName('custom-btn');
 
-		// Loop through all elements with class 'custom-btn' and attach event listener
-		for (let i = 0; i < buttons.length; i++) {
-			buttons[i].addEventListener('mouseover', function() {
-			playSound('audiobloop');
-			});
-		}
-	});
+	const buttons = document.getElementsByClassName('custom-btn');
 
-	// JavaScript to toggle the collapse state
-	const collapseOnButton = document.getElementById("collapseOnButton");
-	const collapseOffButton = document.getElementById("collapseOffButton");
+// Loop through all elements with class 'custom-btn' and attach event listener
+for (let i = 0; i < buttons.length; i++) {
+buttons[i].addEventListener('mouseenter', function () {
+playSound('audiobloop');
+});
+}
 
-	collapseOnButton.addEventListener("click", function () {
-	document.querySelector(".navbar-collapse").classList.add("show");
-	collapseOnButton.disabled = true;
-	collapseOffButton.disabled = false;
-	});
+// JavaScript to toggle the collapse state
+const collapseOnButton = document.getElementById("collapseOnButton");
+const collapseOffButton = document.getElementById("collapseOffButton");
 
-	collapseOffButton.addEventListener("click", function () {
-	document.querySelector(".navbar-collapse").classList.remove("show");
-	collapseOnButton.disabled = false;
-	collapseOffButton.disabled = true;
-	});
+collapseOnButton.addEventListener("click", function () {
+document.querySelector(".navbar-collapse").classList.add("show");
+collapseOnButton.disabled = true;
+collapseOffButton.disabled = false;
+});
 
-	// Initially, start with "On" enabled and "Off" disabled
-	collapseOnButton.disabled = false;
-	collapseOffButton.disabled = true;
+collapseOffButton.addEventListener("click", function () {
+document.querySelector(".navbar-collapse").classList.remove("show");
+collapseOnButton.disabled = false;
+collapseOffButton.disabled = true;
+});
+
+// Initially, start with "On" enabled and "Off" disabled
+collapseOnButton.disabled = false;
+collapseOffButton.disabled = true;
 </script>
