--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -2,10 +2,18 @@ body {
   overflow-x: hidden;
   width: 100%;
   max-width: 100%;
-  background-color: #2c232c; /* Dark gray */
+  /* Dark gray */
 }
 
-a,label,p,h1,h2,h3,h4,h5,h6 {
+a,
+label,
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: "Pixelify Sans", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
@@ -18,30 +26,38 @@ a,label,p,h1,h2,h3,h4,h5,h6 {
 
 
 .main-color {
-  color: #6F1B6F; 
+  color: #6F1B6F;
 }
+
 .main-color-dark {
   color: #4D114D;
 }
+
 .accent-color {
   color: #3caa8b;
 }
+
 .accent-color-dark {
   color: #3B3B3B;
 }
 
 .main-bg {
-  background-color: #6F1B6F; ;
+  background-color: #6F1B6F;
+  ;
 }
+
 .main-bg-dark {
   background-color: #341a3a;
 }
+
 .main-bg-light {
   color: #cfa6cb;
 }
+
 .accent-bg {
   background-color: #57a9a1;
 }
+
 .accent-bg-dark {
   background-color: #1e2f2d;
 }
@@ -49,20 +65,24 @@ a,label,p,h1,h2,h3,h4,h5,h6 {
 
 /* Link color */
 .a {
-  color: #cfa6cb; /* Purple */
+  color: #cfa6cb;
+  /* Purple */
 }
 
 /* Link hover color */
 .a:hover {
-  color: #aa843c; /* Darker shade of purple */
+  color: #aa843c;
+  /* Darker shade of purple */
 }
 
 /* Button styles */
 .custom-btn {
   cursor: pointer;
-  transition: transform 0.3s ease; /* Smooth transition for the transform property */
+  transition: transform 0.3s ease;
+  /* Smooth transition for the transform property */
 }
 
 .custom-btn:hover {
-  transform: scale(1.1); /* Increase scale on hover */
+  transform: scale(1.1);
+  /* Increase scale on hover */
 }
