--- a/templates/pausemenu.html.twig
+++ b/templates/pausemenu.html.twig
@@ -49,7 +49,7 @@
 				<!-- Volume Slider -->
 				<div class="row main-bg">
 					<label for="volumeRange" class="form-label col-auto">Volume:</label>
-					<input type="range" class="form-range col-auto" onchange="setVolume(this.value, 'audio-sfx-group')" style="width:100%;" id="volumeRange" min="0" max="1" step="0.01" value="1">
+					<input type="range" class="form-range col-auto" style="width:100%;" id="volumeRange" min="0" max="1" step="0.01" value="0.25">
 				</div>
 
 			</div>
@@ -57,6 +57,19 @@
 		</div>
 	</div>
 </div>
+
+<script>
+    // Get the range input element
+    var volumeRange = document.getElementById('volumeRange');
+
+	setVolume(volumeRange.value, 'audio-sfx-group');
+
+    // Add event listener for the 'input' event
+    volumeRange.addEventListener('input', function() {
+        // Call the setVolume function with the current value and the 'audio-sfx-group' parameter
+        setVolume(this.value, 'audio-sfx-group');
+    });
+</script>
 
 <script>
 
