--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -13,13 +13,13 @@
 	<section id="aboutme" class="container-fluid d-flex justify-content-center align-items-center" style="min-height: 100vh;">
 		<img class="mx-auto position-fixed" style="z-index: -1000000; filter: blur(7px) brightness(70%); height: 103%; width: 111%;" src="{{ asset('gridbg.gif') }}" alt="Other Image"/>
 		<img class="mx-auto position-fixed" style="z-index: -100000; filter: blur(5px); height: 103vh; width: auto;" src="{{ asset('gridbg.gif') }}" alt="Other Image"/>
-		<div class="container main-bg-dark-translucent rounded-5 border border-light d-flex flex-column justify-content-center" style="min-height: 50vh;">
-			<div class="row m-2">
-				<h2 class="text-center accent-color">Software & Game Dev</h2>
+		<div class="container main-bg-dark-translucent rounded-5 border border-light d-flex flex-column justify-content-between justify-content-around" style="min-height: 40vh;">
+			<div class="row mt-md-0 mt-3">
+				<h2 class="text-center accent-color">Web & Game Dev</h2>
 			</div>
-			<div class="row my-4 mx-1">
-				<h7 class="white-text text-justify text-lg">
-					Greetings! Welcome to my corner of the digital universe. I'm Rodolfo León also known by my mote FoundTexas. I'm a passionate computer scientist specialized in 3D Graphics, Project Management and Game Development. I thrive on collaboration and believe that diverse perspectives fuel innovation, leading to captivating and innovative experiences that will resonate across many users.
+			<div class="row mx-md-5 mx-1">
+				<h7 class="white-text text-justify text-lg mb-md-5 mb-3">
+					Greetings! Welcome to my corner of the digital universe. I'm Rodolfo León also known as FoundTexas. I'm a passionate computer scientist specialized in 3D Graphics, Project Management and Game Development. I thrive on collaboration and believe that diverse perspectives fuel innovation, leading to significant and innovative experiences across many users.
 				</h7>
 			</div>
 		</div>
